# ShrimpStats

./: Cargo.toml
.github/workflows/: pr_checks.yml
api/: Cargo.toml
api/src/: event_handler.rs  main.rs
api/src/db/: mod.rs
api/src/models/: mod.rs  player.rs  server.rs
api/src/models/events/player/: mod.rs  player_add_ip.rs  player_amend_name.rs  player_delete.rs  player_register.rs
api/src/models/events/server/: mod.rs  server_amend_act_map.rs  server_amend_deaths.rs  server_amend_ip.rs  server_amend_kills.rs  server_amend_max_players.rs  server_amend_name.rs  server_amend_players.rs  server_amend_port.rs  server_amend_rcon_password.rs  server_delete.rs  server_register.rs
macro_utils/: Cargo.toml
macro_utils/src/: lib.rs
