[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
once_cell = "1.19.0"
serde = "1.0.195"
surrealdb = "1.1.1"
tokio = { version = "1.35.1", features = ["full"] }
macro_utils = {path = "../macro_utils"}